[gd_scene load_steps=8 format=3 uid="uid://d3cr2qbno3f7q"]

[ext_resource type="PackedScene" uid="uid://dih7smoni8cgw" path="res://InventoryGrid.tscn" id="1_aj83m"]
[ext_resource type="Script" path="res://PickerPanel.gd" id="1_iqic5"]
[ext_resource type="Resource" uid="uid://df2xnk3haqwj" path="res://Items/Item1x1.tres" id="2_yrxsl"]
[ext_resource type="Resource" uid="uid://l8qgowc3y6ef" path="res://Items/Item1x2.tres" id="3_ekuae"]
[ext_resource type="Resource" uid="uid://dlie2oo2uyqae" path="res://Items/Item1x3.tres" id="4_stc8s"]
[ext_resource type="Resource" uid="uid://coi7ypohy4lwk" path="res://Items/Item2x2.tres" id="5_qgacj"]
[ext_resource type="Resource" uid="uid://c0ig6rthcrsqr" path="res://Items/Item2x3.tres" id="6_p0bob"]

[node name="PickerPanel" type="PanelContainer"]
offset_left = 863.0
offset_top = 239.0
offset_right = 943.0
offset_bottom = 377.0
script = ExtResource("1_iqic5")
item_array = Array[Resource("res://Items/ItemData.gd")]([ExtResource("2_yrxsl"), ExtResource("3_ekuae"), ExtResource("4_stc8s"), ExtResource("5_qgacj"), ExtResource("6_p0bob")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="InventoryGrid" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_aj83m")]
layout_mode = 2
n_rows = 3
n_columns = 2

[node name="ItemLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ItemLabel"
horizontal_alignment = 1

[node name="Pick" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 3
text = "Pick"

[node name="Refresh" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Refresh"

[connection signal="button_up" from="MarginContainer/VBoxContainer/Pick" to="." method="_on_pick_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Refresh" to="." method="_on_refresh_button_up"]
